Add social links

--- a/src/index.haml
+++ b/src/index.haml
@@ -23,7 +23,7 @@
         .logo
           %a(href="/")
             %img(src="assets/images/logo-negativo.svg")
-            %p SUA FAMILIA EM BOAS MÃOS
+            %p SUA FAMÍLIA EM BOAS MÃOS
 
         %nav
           %ul
@@ -51,221 +51,18 @@
           %a(class="btn btn-default baixar" href="#" role="button") Baixe agora, é gratuito!
 
           %a(class="btn btn-default video" href="#" role="button") Assista ao vídeo
-
-
-        .col-xs-6.col-sm-6.col-md-6.col-lg-6
-
-    %section.features
-      .container
-        .row
-          %h3 Vantagens
-            %small Só o Family24h oferece:
-
-        .list.col-md-8
-
-          .item
-            .text_on
-              %p 
-                Alerta de 
-                %br 
-                Panico
-            .text_hover
-              %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
-
-          .item
-            .text_on
-              %p 
-                Detalhamento
-                %br
-                do dispositivo
-            .text_hover
-              %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
-
-          .item
-            .text_on
-              %p 
-                Avisos por
-                %br
-                SMS
-            .text_hover
-              %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
-
-          .item
-            .text_on
-              %p 
-                Cercas
-                %br
-                virtuais
-            .text_hover
-              %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
-
-          .item
-            .text_on
-              %p 
-                Aviso de
-                %br
-                substituição
-                %br
-                do SIMCARD
-            .text_hover
-              %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
-
-          .item
-            .text_on
-              %p 
-                Informações
-                %br
-                de velocidade
-            .text_hover
-              %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
-
-          .item
-            .text_on
-              %p 
-                Proteção contra
-                %br
-                roubo do aparelho
-                %br
-                e dos dados
-            .text_hover
-              %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
-
-          .item
-            .text_on
-              %p Item description normal
-            .text_hover
-              %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
-
-          .item
-            .text_on
-              %p  
-                Histórico de
-                %br
-                posições
-            .text_hover
-              %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
+    
+    //=include home_features.haml
 
     %section.versions
       .container
         .row
-          %h3 Versões
+          %h3 
+            %span Versões
             %small Ainda mais proteção para sua familia
+   
+    //=include home_help.haml
 
-
-
-    %section.help
-      .container
-        .row
-          %h3 Ajuda
-            %small Precisa de ajuda? Tem perguntas? Encontre as respostas que você precisa aqui
-
-        .col-xs-3.col-sm-3.col-md-3.col-lg-3
-          %h4 Gerais
-            %ul
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-
-          %h4 Gerais
-            %ul
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-
-        .col-xs-3.col-sm-3.col-md-3.col-lg-3
-          %h4 Gerais
-            %ul
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-
-          %h4 Gerais
-            %ul
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-
-        .col-xs-3.col-sm-3.col-md-3.col-lg-3
-          %h4 Gerais
-            %ul
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-
-          %h4 Gerais
-            %ul
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-
-        .col-xs-3.col-sm-3.col-md-3.col-lg-3
-          %h4 Gerais
-            %ul
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-
-          %h4 Gerais
-            %ul
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
-              %li
-                %a(href="#") Item 
 
     %section.contact
       .container
@@ -316,26 +113,60 @@
             %li 
               %p Versões
             %li 
-              %a(href="#") Conheça
+              %a(href="#") Gratuito
             %li 
-              %a(href="#") Vantagens
-            %li 
-              %a(href="#") Termos de Uso
-            %li 
-              %a(href="#") Políticas e Privacidade
+              %a(href="#") Premium
 
           %ul
             %li 
               %p Ajuda
             %li 
-              %a(href="#") Conheça
+              %a(href="#") Suporte
             %li 
-              %a(href="#") Vantagens
-            %li 
-              %a(href="#") Termos de Uso
-            %li 
-              %a(href="#") Políticas e Privacidade
+              %a(href="#") Contato
 
         .appstore
           %img(src="assets/images/google_play.png")
           %img(src="assets/images/app_store.png")
+
+        .socials-links
+          %p Siga-nos
+          %div
+            %a(href="#")
+              %img(src="icon_footer_facebook.png")
+            %a(href="#")
+              %img(src="icon_footer_tumblr.png")
+            %a(href="#")
+              %img(src="icon_footer_pinterest.png")
+            %a(href="#")
+              %img(src="icon_footer_twitter.png")
+            %a(href="#")
+              %img(src="icon_footer_youtube.png")
+            %a(href="#")
+              %img(src="icon_footer_linkedin.png")
+            %a(href="#")
+              %img(src="icon_footer_gplus.png")
+
+        .legal
+          %p 
+            Copyright &copy; 2015 - Family 24h - An 
+            %a(href="http://www.eokoe.com") Eokoe 
+            Project
+
+<!-- jQuery -->
+%script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+:javascript
+  window.jQuery || document.write('<script src="assets/scripts/vendor/jquery-1.11.3.min.js")<\/script>')
+
+:javascript
+  $(".item .more").click(function() {
+    $(this).parent().hide();
+    $(this).parent().parent().addClass("open");
+    $(this).parent().next().show();
+  });
+
+  $(".item .minus").click(function() {
+    $(this).parent().hide();
+    $(this).parent().parent().removeClass("open");
+    $(this).parent().prev().show();
+  });
