--- a/src/home_help.haml
+++ b/src/home_help.haml
@@ -1,39 +1,17 @@
 %section.help
+  %a(name="help")
   .container
     .row
       %h3 
         %span Ajuda
         %small Precisa de ajuda? Tem perguntas? Encontre as respostas que você precisa aqui
 
-    .col-xs-3.col-sm-3.col-md-3.col-lg-3
-      %h4 Gerais
-        %ul
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
-
-      %h4 Gerais
-        %ul
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
+    .col-xs-12.col-sm-12.col-md-12.col-lg-12
+      %span.glyphicon.glyphicon-search
+      %input(type="text" id="busca" name="busca" placeholder="Digite aqui sua pergunta")
 
     .col-xs-3.col-sm-3.col-md-3.col-lg-3
-      %h4 Gerais
+      %h4 Tópico
         %ul
           %li
             %a(href="#") Item 
@@ -46,7 +24,19 @@
           %li
             %a(href="#") Item 
 
-      %h4 Gerais
+      %h4 Tópico
+        %ul
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+      %h4 Tópico
         %ul
           %li
             %a(href="#") Item 
@@ -59,21 +49,7 @@
           %li
             %a(href="#") Item 
 
-    .col-xs-3.col-sm-3.col-md-3.col-lg-3
-      %h4 Gerais
-        %ul
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
-          %li
-            %a(href="#") Item 
-
-      %h4 Gerais
+      %h4 Tópico
         %ul
           %li
             %a(href="#") Item 
@@ -87,7 +63,19 @@
             %a(href="#") Item 
 
     .col-xs-3.col-sm-3.col-md-3.col-lg-3
-      %h4 Gerais
+      %h4 Tópico
+        %ul
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+      %h4 Tópico
         %ul
           %li
             %a(href="#") Item 
@@ -100,7 +88,124 @@
           %li
             %a(href="#") Item 
 
-      %h4 Gerais
+      %h4 Tópico
+        %ul
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+
+      %h4 Tópico
+        %ul
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+
+    .col-xs-3.col-sm-3.col-md-3.col-lg-3
+      %h4 Tópico
+        %ul
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+      %h4 Tópico
+        %ul
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+
+      %h4 Tópico
+        %ul
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+
+      %h4 Tópico
+        %ul
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+
+    .col-xs-3.col-sm-3.col-md-3.col-lg-3
+      %h4 Tópico
+        %ul
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+      %h4 Tópico
+        %ul
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+
+      %h4 Tópico
+        %ul
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+          %li
+            %a(href="#") Item 
+
+      %h4 Tópico
         %ul
           %li
             %a(href="#") Item 
