--- a/src/header.haml
+++ b/src/header.haml
@@ -17,6 +17,25 @@
     %script(src="assets/scripts/vendor/modernizr-2.8.3.min.js")
 
   %body
-    <!--[if lt IE 8]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+    .top
+      .logo
+        %img(src="assets/images/logo-negativo.svg")
+      .user-config.glyphicon.glyphicon-cog
+      %p.profile_picture_url
+      .gender
+
+      .config-box
+        .top-tip
+
+        .row
+
+          %div
+            .avatar
+
+          %div
+            %p.name Name
+            %p.email Email
+            %p.telephone Telephone
+
+        .row
+          %p logout
