Add BEM Methodology to Login page

--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -485,7 +485,7 @@ footer {
   }
 }
 
-
+//=include login/login.scss
 
 /*----------------------------------------------------------------------------*\
     $EXTRA_SMALL
