--- a/src/header_interna.haml
+++ b/src/header_interna.haml
@@ -12,31 +12,13 @@
     <!-- Place favicon.ico in the root directory -->
     %link(rel="shortcut icon" href="favicon.ico" type="image/x-icon")
 
-    %link(rel="stylesheet" href="assets/stylesheets/internal.css")
+    %link(rel="stylesheet" href="assets/stylesheets/style.css")
 
     %script(src="assets/scripts/vendor/modernizr-2.8.3.min.js")
 
   %body
-    .top
-      .logo
-        %a(href="/")
-          %img(src="assets/images/logo-negativo.svg")
-      .user-config.glyphicon.glyphicon-cog
-      %p.profile_picture_url
-      .gender
 
-      .config-box
-        .top-tip
-
-        .row
-
-          %div
-            .avatar
-
-          %div
-            %p.name Name
-            %p.email Email
-            %p.telephone Telephone
-
-        .row
-          %p logout
+    .header
+      .container
+        %img.header__logo(src="assets/images/logo-positivo.svg")
+        %p.header__tagline SUA FAMILIA EM BOAS MÃOS
