--- a/src/header_interna.haml
+++ b/src/header_interna.haml
@@ -12,13 +12,13 @@
     <!-- Place favicon.ico in the root directory -->
     %link(rel="shortcut icon" href="favicon.ico" type="image/x-icon")
 
-    %link(rel="stylesheet" href="assets/stylesheets/style.css")
+    %link(rel="stylesheet" href="assets/stylesheets/style.min.css")
 
     %script(src="assets/scripts/vendor/modernizr-2.8.3.min.js")
 
   %body
 
-    .header
+    %header.header
       .container
         %img.header__logo(src="assets/images/logo-positivo.svg")
         %p.header__tagline SUA FAMILIA EM BOAS MÃOS
