--- a/src/home_features.haml
+++ b/src/home_features.haml
@@ -8,8 +8,8 @@
 
     .list.col-xs-12.col-sm-12.col-md-9.col-lg-9
 
-      .item
-        .text_on
+      .list__item
+        .item__front
           %img.icon(src="assets/images/icon_warn.png")
           %p 
             Alerta de 
@@ -17,13 +17,13 @@
             Panico
 
           %img.more(src="assets/images/icon_more.png")
-        .text_hover
+        .item__back
           %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
           %img.minus(src="assets/images/icon_minus.png")
 
-      .item
-        .text_on
+      .list__item
+        .item__front
           %img.icon(src="assets/images/icon_id.png")
           %p 
             Detalhamento
@@ -31,13 +31,13 @@
             do dispositivo
 
           %img.more(src="assets/images/icon_more.png")
-        .text_hover
+        .item__back
           %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
           %img.minus(src="assets/images/icon_minus.png")
 
-      .item
-        .text_on
+      .list__item
+        .item__front
           %img.icon(src="assets/images/icon_sms.png")
           %p 
             Avisos por
@@ -45,13 +45,13 @@
             SMS
 
           %img.more(src="assets/images/icon_more.png")
-        .text_hover
+        .item__back
           %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
           %img.minus(src="assets/images/icon_minus.png")
 
-      .item
-        .text_on
+      .list__item
+        .item__front
           %img.icon(src="assets/images/icon_fence.png")
           %p 
             Cercas
@@ -59,13 +59,13 @@
             virtuais
 
           %img.more(src="assets/images/icon_more.png")
-        .text_hover
+        .item__back
           %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
           %img.minus(src="assets/images/icon_minus.png")
 
-      .item
-        .text_on
+      .list__item
+        .item__front
           %img.icon(src="assets/images/icon_simcard.png")
           %p 
             Aviso de
@@ -75,13 +75,13 @@
             do SIMCARD
 
           %img.more(src="assets/images/icon_more.png")
-        .text_hover
+        .item__back
           %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
           %img.minus(src="assets/images/icon_minus.png")
 
-      .item
-        .text_on
+      .list__item
+        .item__front
           %img.icon(src="assets/images/icon_velocidade.png")
           %p 
             Informações
@@ -89,13 +89,13 @@
             de velocidade
 
           %img.more(src="assets/images/icon_more.png")
-        .text_hover
+        .item__back
           %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
           %img.minus(src="assets/images/icon_minus.png")
 
-      .item
-        .text_on
+      .list__item
+        .item__front
           %img.icon(src="assets/images/icon_eye.png")
           %p 
             Proteção contra
@@ -105,24 +105,24 @@
             e dos dados
 
           %img.more(src="assets/images/icon_more.png")
-        .text_hover
+        .item__back
           %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
           %img.minus(src="assets/images/icon_minus.png")
 
-      .item
-        .text_on
+      .list__item
+        .item__front
           %img.icon(src="assets/images/icon_warn.png")
           %p Item description normal
 
           %img.more(src="assets/images/icon_more.png")
-        .text_hover
+        .item__back
           %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
           %img.minus(src="assets/images/icon_minus.png")
 
-      .item
-        .text_on
+      .list__item
+        .item__front
           %img.icon(src="assets/images/icon_geolocation.png")
           %p  
             Histórico de
@@ -130,7 +130,7 @@
             posições
 
           %img.more(src="assets/images/icon_more.png")
-        .text_hover
+        .item__back
           %p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
           %img.minus(src="assets/images/icon_minus.png")
