--- a/src/header_interna.haml
+++ b/src/header_interna.haml
@@ -20,5 +20,6 @@
 
     %header.header
       .container
-        %img.header__logo(src="assets/images/logo-positivo.svg")
+        %a(href="/")
+            %img.header__logo(src="assets/images/logo-positivo.svg")
         %p.header__tagline SUA FAMILIA EM BOAS MÃOS
